payment-gateway-providers/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-gateway-providers
    service: payment-gateway-providers
  name: payment-gateway-providers
  namespace: payments
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: payment-gateway-providers
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-gateway-providers
    service: payment-gateway-providers
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-attributes: deletion_protection.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:027984065276:certificate/40073a3f-250f-41bd-bd76-6cd850cdffcf
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  name: svc-vpn-site-to-site
  namespace: payments
spec:
  ports:
    - port: 443
      targetPort: 8000
      nodePort: 30800
      protocol: TCP
  selector:
    app: payment-gateway-providers
  type: LoadBalancer
