payment-gateway-providers/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-gateway-providers
  namespace: payments
spec:
  podSelector:
    matchLabels:
      app: payment-gateway-providers
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: payment-gateway-providers
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - ports:
        - protocol: TCP
          port: 5671
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15964
